<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3B9B9"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="871dp"
        android:layout_height="459dp"
        android:contentDescription="@string/background"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <Button
        android:id="@+id/jugar"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:text="@string/mando"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/login"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:onClick="lanzarMInicioSesión"
        android:text="@string/iniciarsesion"
        app:layout_constraintBottom_toTopOf="@+id/estadisticas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jugar" />

    <Button
        android:id="@+id/estadisticas"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:text="@string/estadisticas"
        app:layout_constraintBottom_toTopOf="@+id/configuracion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/configuracion"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:onClick="lanzarConfig"
        android:text="@string/configuracion"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estadisticas" />

</androidx.constraintlayout.widget.ConstraintLayout>