<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="871dp"
        android:layout_height="459dp"
        android:contentDescription="@string/background"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        app:srcCompat="@drawable/background" />

    <Button
        android:id="@+id/button"
        android:layout_width="315dp"
        android:layout_height="57dp"
        android:backgroundTint="#5b00a3"
        android:backgroundTintMode="add"

        android:text="Inicio de sesión"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <EditText
        android:id="@+id/editTextRContraseña"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:background="@drawable/bordes_redondos_datos"
        android:backgroundTint="#673AB7"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="#5B30A8"
        android:textColorHint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:backgroundTint="#5b00a3"
        android:onClick="lanzarCrearCuenta"
        android:text="@string/sinCuenta"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="206dp"
        android:layout_height="52dp"
        android:backgroundTint="#5b00a3"
        android:onClick="lanzarMenu"
        android:text="@string/iniciarSesion"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:background="@drawable/bordes_redondos_datos"
        android:backgroundTint="#673AB7"
        android:ems="10"
        android:hint="@string/nombreUsuario"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textColor="#7F56D4"
        android:textColorHint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botonMenu2"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/baseline_arrow_forward_24"
        android:backgroundTint="#E4E4E4"
        android:onClick="lanzarMenu"
        android:rotation="180"
        android:textColor="#DCDCDC"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029999971" />

</androidx.constraintlayout.widget.ConstraintLayout>