<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7CBF6"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagenFondo2"
        android:layout_width="871dp"
        android:layout_height="459dp"
        android:contentDescription="@string/background"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/editTextOnOfF"
        android:layout_width="192dp"
        android:layout_height="38dp"
        android:background="@drawable/bordes_redondos_nombres2"
        android:gravity="center_horizontal"
        android:text="@string/desconectado"
        android:textColor="#F3F1F7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/editTextPort"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/botonConectar"
        android:layout_width="192dp"
        android:layout_height="66dp"
        android:layout_marginBottom="36dp"
        android:text="@string/conectar"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextOnOfF"
        app:layout_constraintEnd_toEndOf="@+id/editTextOnOfF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextOnOfF"
        app:layout_constraintTop_toBottomOf="@+id/botonVerde"
        app:layout_constraintVertical_bias="0.91" />

    <ImageView
        android:id="@+id/botonRojo"
        android:layout_width="66dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/botonVerde"
        app:layout_constraintStart_toStartOf="@+id/botonConectar"
        app:layout_constraintTop_toTopOf="@+id/botonVerde"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/boton_rojo_encendido" />

    <ImageView
        android:id="@+id/botonVerde"
        android:layout_width="66dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextOnOfF"
        app:layout_constraintEnd_toEndOf="@+id/botonConectar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        app:srcCompat="@drawable/boton_verde_apagado" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bordes_redondos_datos"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="36000"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoPuerto" />

    <EditText
        android:id="@+id/editTextIP192"
        android:layout_width="92.5dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/bordes_redondos_datos"
        android:ems="10"
        android:gravity="center"
        android:hint="192"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusForward="@+id/editTextIP168"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoIP"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/editTextIP168"
        android:layout_width="92.5dp"
        android:layout_height="50dp"
        android:layout_marginStart="132dp"
        android:background="@drawable/bordes_redondos_datos"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="168"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusForward="@+id/editTextIP0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoIP"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/editTextIP0"
        android:layout_width="92.5dp"
        android:layout_height="50dp"
        android:layout_marginStart="224dp"
        android:background="@drawable/bordes_redondos_datos"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="0"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusForward="@+id/editTextIP1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoIP"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/editTextIP1"
        android:layout_width="92.5dp"
        android:layout_height="50dp"
        android:layout_marginStart="316dp"
        android:background="@drawable/bordes_redondos_datos"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="1"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusForward="@+id/editTextPort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoIP"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/textoPuerto"
        android:layout_width="370dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bordes_redondos_nombres"
        android:fontFamily="@font/cabin"
        android:text="@string/puerto"
        android:textColor="#F3F1F7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoIP" />

    <TextView
        android:id="@+id/textoIP"
        android:layout_width="370dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/bordes_redondos_nombres"
        android:fontFamily="@font/cabin"
        android:text="@string/direccionIP"
        android:textColor="#F3F1F7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botonMenu5"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/baseline_arrow_forward_24"
        android:backgroundTint="#E4E4E4"
        android:onClick="lanzarMenu"
        android:rotation="180"
        android:textColor="#DCDCDC"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

</androidx.constraintlayout.widget.ConstraintLayout>